<resources>
    <string name="app_name">리부트북</string>
    <string name="event_image_description">이벤트 배너 이미지</string>
    <string name="item1_title">유니온 레벨별 사냥터</string>
    <string name="item2_title">링크, 유니온 효과 정리</string>
    <string name="item3_title">직업별 스킬 코어 우선순위</string>
    <string name="item4_title">사냥 계산기</string>
    <string name="item5_title">무기 추옵 정리</string>
    <string name="item6_title">주간 퀘스트 헬퍼</string>
    <string name="item7_title">보스 결정석 메소 정리</string>
    <string name="item8_title">주요 레시피 정리</string>
    <string name="item9_title">아케인 주간 퀘스트 헬퍼</string>
    <string name="item10_title">유용한 사이트 정리</string>
    <string name="union_potion">유니온의 부 사용</string>
    <string name="union_hunting_new_1_description">"230615 패치로 인해서(이하 생략) 이전에는 골렘, 아이류를 잡았지만 이제는 들개를 잡는 것이 제일 빠릅니다. 전문기술 버튼으로 마이스터빌(이하 마빌) 이동이 35레벨 이상부터 가능한 점은 유의하랍니다."</string>
    <string name="union_hunting_new_2_description">"본섭과 동일하게 페리온의 와일드보어를 잡으러 가시면 됩니다. 하지만 여전히 테마던전도 좋은 선택지 입니다." </string>
    <string name="union_hunting_new_3_description">"조용한 습지의 드레이크를 잡으셔도 괜찮지만 자리가 부족하고 테마던전이 좋은 선택지가 될 수 있습니다."</string>
    <string name="union_hunting_new_4_description">"59레벨에 이지 자쿰을 잡음으로써 60레벨을 달성하고 3차 전직을 진행하시면 됩니다."</string>
    <string name="union_hunting_new_5_description">"지형이 애매하지만, 스킵하기엔 대체재가 마땅찮습니다. 84레벨의 경비로봇은 80제 장비를 줍니다. 미처 챙기지 못한 장비들이 있다면 파밍해주면 되겠습니다.\n" +
                        "\n" +
                        "갱도가 너무 싫거나 몹이 떨어진다 싶으면, 길라잡이 80~89 구간의 맨 뒤에 있는 사헬지대로 이동해서 한칸 왼쪽으로 이동하면 스콜피온 사냥터로 미리 갈 수 있으니 참고하세요."</string>
    <string name="union_hunting_new_6_description">"이 구간이 어찌보면 체감상 정말 경험치가 오르지 않는 구간입니다. 이 구간 사냥터에 몬스터들의 젠 숫자가 그리 많지 않은 것도 이유이고 별거없는 3차스킬로 오래 사냥을 해서 그럴수도 있습니다만, 89~90레벨 몬스터가 있는 사헬지대(혹은 사헬지대2의 왼쪽, 오른쪽 위 포탈 잠자는or꿈꾸는 사막에서 사냥하셔도 됨)에서 조금 레벨업 후 95 부근에 관출로 이동하셔서 사냥해주셔도 됩니다.\n" +
                        "\n" +
                        "90레벨 이상 몬스터는 100제 장비템을 드롭하며, 관출의 사이티는 70제 귀걸이를 쓸데없이 많이 줍니다. 관출은 자리 잡기가 정말 힘드니, 한 번 얻었다면 꼭 100을 찍으세요."</string>
    <string name="union_hunting_new_7_description"></string>
    <string name="union_hunting_new_8_description"></string>
    <string name="union_hunting_new_9_description"></string>
    <string name="union_hunting_new_10_description"></string>
    <string name="union_hunting_new_11_description"></string>
    <string name="union_hunting_new_12_description"></string>
    <string name="union_hunting_new_13_description"></string>
    <string name="union_hunting_new_14_description"></string>
    <string name="union_hunting_new_15_description"></string>
    <string name="union_hunting_new_16_description"></string>
    <string name="union_hunting_zero_1_description">"보통 30~40 사이에 끝나는 경우가 많으며, 몇몇 직업의 경우 수행 않을 시 아예 다른 곳으로 갈 수 없으니 맘편히 수행하세요. 참고로, 몇몇 캐릭터는 퀘스트에 [필수] 라고 해놓고 실제로는 수행하지 않아도 별 상관이 없는 경우도 있습니다."</string>
    <string name="union_hunting_zero_2_description">"싸움터1은 몬스터 레벨 30, 2는 몬스터 레벨 37입니다.\n" +
                        "싸움터1에서 사냥하다가 레벨이 높아지면 룬이 남은 시간만큼 싸움터2에서 사냥하시면 경험치를 많이 얻을 수 있습니다.\n" +
                        "엘로딘의 경우에는 텔레포트를 사용해야하는 단점이 있지만 해당 사냥터는 텔레포트 없이 이동할 수 있다는 장점이 있습니다.\n" +
                        "\n" +
                        "참고로, 이 레벨 구간에도 경험치 뿌리기(이하 경뿌)를 받을 수 있습니다. 다만, 33레벨 이상이어야 경뿌를 뿌린다는 고확이 보이고, 마이스터빌(이하 마빌) 이동이 35레벨 이상부터 가능하므로, 다른 캐릭터로 확인 후 저렙 캐릭터로 해당 채널 마빌에서 받으시는 것 또한 방법입니다. "</string>
    <string name="union_hunting_zero_3_description">"사냥보다 테마던전이 무조건 낫습니다. 엘리넬과 리에나 두 지역은 속도도 빠른 편인데다 망토, 벨트, 얼굴장식, 눈장식 등 사냥만으로 획득할 수 없는 스타포스 부위를 주기에 저레벨 스펙 확보에 용이하며, 몬스터를 얼마나 빨리 잡느냐와 관계없이 비교적 균일한 경험치를 얻을 수 있기 때문입니다.\n" +
                        "\n" +
                        "테마던전 지역에서 팁이 있다면,\n" +
                        "(1)타인과 같은 지역에서 있어도 사냥터가 공유되지 않습니다. 즉, 자리나 스틸이 없습니다.\n" +
                        "(2)리에나에만 해당되는 것인데, 한 섬당 퀘스트가 2~3개씩 있습니다. 이 것들을 깰 때마다 퀘를 준 NPC한테 갈 것이 아니라, 좌측 전구에서 퀘완료와 다음퀘수락이 가능합니다. 이것도 시간을 많이 단축시켜 줍니다.\n" +
        "(3)엘리넬의 경우 초반 물위의 포탈을 걸어서 통과하는 퀘스트까지만 깨면 어디서 마을귀환주문서를 쓰더라도 마법학교로 이동됩니다. 리에나 또한 마찬가지로, 어디서 마귀를 쓰든 처음 위치한 메인 섬으로 이동시켜주니, 이를 이용하면 퀘스트간 이동에 있어 시간을 많이 단축시켜 줍니다.\n"</string>
    <string name="union_hunting_zero_4_description">"리에나 해협 퀘스트를 끝냈다면 길라잡이에서 '와일드보어의 땅'으로 이동합니다.\n" +
                        "\n" +
                        "몬스터 레벨이 55라서 데미지 반감이 없이 잘 들어갑니다." </string>
    <string name="union_hunting_zero_5_description">"인기 사냥터인 조용한 습지입니다. 자리가 마땅치 않다면 동굴 낭떠러지도 좋은 선택지입니다.\n" +
                        "여기조차 자리가 없다면 아이스 드레이크도 괜찮습니다.\n" +
                        "해당 구간부터는 60제 장비를 부위별로 하나씩은 마련해 착용 후 5강화까지 해두는 것이 좋습니다. 이전에 테마던전을 끝내고 획득한 장비들 모두 포함입니다."</string>
    <string name="union_hunting_zero_6_description">"하늘계단1의 경우에는 좋은 사냥터인 것은 확실합니다만, 자리가 없고 스틸또한 많습니다.\n" +
        "그래서 구름공원 4 또는 6을 추천합니다." </string>
    <string name="union_hunting_zero_7_description">"에델슈타인의 갱도 1,2,3을 추천합니다. 마을에서 거리가 멀어서 텔레포트를 하시는 것을 추천드립니다.\n" +
                        "\n" +
                        "지형상으로는 갱도2가 가장 좋습니다만, 1과 3또한 지형이 어렵지 않으니 자리가 없다면 생각하시는 것을 권합니다."</string>
    <string name="union_hunting_zero_8_description">"캐릭터가 강하다면 70초반, 약하다면 70중반에 사헬지대 2를 추천합니다.\n" +
                        "사헬지대 몬스터 레벨이 89, 90이라 70중반에 오는게 마음이 편합니다.\n" +
                        "해당 지역도 인기 사냥터라 아리안트의 흰 바위 사막또한 추천합니다.\n" +
                        "해당 지역의 벨라모아가 80레벨대의 장비를 많이 주기에 장비 파밍을 겸해서 해당 지역도 추천드립니다."</string>
    <string name="union_hunting_zero_9_description">"80레벨 초중반에는 마가티아에 해당 사냥터를 추천합니다.\n" +
                        "B-1의 몬스터 레벨은 93, B-3은 91\n" +
                        "C-1, C-2의 몬스터레벨은 95입니다. B-1에서의 사냥이 힘들면 B-3으로 이동해주세요.\n" +
                        "B 지역에서 80레벨 중반 ~ 후반까지 사냥하고, C지역에서 90레벨 중반까지 사냥합니다.\n" +
                        "관계자 외 출입금지 가 좋은 맵인 것은 사실입니다만, 자리가 없을 확률이 매우 높기에 다른 지역을 추천드렸습니다.\n" +
                        "하지만 90레벨에 길라잡이로 해당 지역의 대화로 경험치를 얻는 것은 매우 추천드립니다."
                        </string>
    <string name="union_hunting_zero_10_description">"첫 스타포스 맵인 하늘 둥지2 입니다. 이전에 스타포스를 올리셨다면 5보다는 높으실겁니다.\n" +
                        "몬스터를 여러번 때려야 하지만, 스타포스 맵에서의 몬스터는 경험치를 굉장히 많이 줍니다.\n" +
                        "4차 전직을 하게 된다면, 더욱 빠르게 사냥이 가능하니 참고 100까지 올려주세요.\n"
                        "\n" +
                        "100을 달성 후, 4차전직을 하고 노말 자쿰을 통해서 101을 올린 후에 해당 레벨부터 이벤트 참여가 가능함으로 이벤트가 있다면 좌측의 별을 클릭하여 이벤트 절차를 밟습니다.\n" +
                        "해당 레벨부터 길드를 가입할 수 있으니, 참고해주세요." +</string>
    <string name="union_hunting_zero_11_description">"뒤틀린 시간의길 4에서 왼쪽 위 포탈을 타고 '꼬여버린 시간'으로 갑니다.\n" +
                        "\n" +
                        "몬스터의 레벨이 120이라 105레벨에 오면 힘들 수 있지만, 4차스킬의 패시브 스킬들을 1레벨씩 올리면 금방 레벨업하면서 쉬워집니다."</string>
    <string name="union_hunting_zero_12_description">"해당 구간은 130레벨 무스펠 장비를 파밍하면서 레벨업을 진행합니다.\n" +
    "무스펠 장비부터는 세트 옵션에 일반 몬스터 데미지 증가가 있어서, 풀 세트 파밍하시고 진행하시는 것을 추천드립니다."</string>
    <string name="union_hunting_zero_13_description">"상시로 버닝이 10인 지역입니다.\n" +
                        "해당 구간에서는 55레벨의 귀고리를 많이 줍니다." +
                        "펜살리르 장비도 파밍하면서 귀고리 주스텟 2% 그 다음으로 귀고리 에픽순서로 생각하시면 좋습니다.\n" +
                        "귀고리는 해당 지역에서 얻은 장비를 통하여 토드를 진행하여 사용해주세요.\n" +
                        "펜살리르 장비는 이벤트를 통하여 루타비스 장비를 얻은 것이 아니라면 200까지 사용할 장비이므로, 계속 파밍하셔야 합니다."</string>
    <string name="union_hunting_zero_14_description">"이전에 얻은 펜살리르 장비를 토드 또는 강화를 통하여 스타포스 요구치를 만족시켜 줍시다.\n" +
    "스타포스를 80까지 찍으셨다면, 커닝타워의 버닝 지역이 더 좋은 것은 사실입니다만, 해당 사냥터는 너무 인기지역이라 자리가 없을 확률이 높습니다.\n" +
    "용의 둥지는 커닝 타워보다 비교적 비인기 지역이지만 버닝이 높은 용의 둥지를 추천드립니다. \n"
    "죽은 용의 둥지는 65, 남겨진 용의 둥지는 70의 스타포스를 요구합니다. 본인의 스타포스 강화량에 따라서 선택해주시면 좋습니다."</string>
    <string name="union_hunting_zero_15_description">"길라잡이의 암벽거인 퀘스트를 진행하면서 해당 지역의 마지막 보스가 드랍하는 뱃지또한 착용하시면 좋습니다.\n" +
        "170레벨까지 스타포스존인 벌떼들의 본거지(★80)에서 사냥 진행해주세요.\n" +
        "맨티스가 나오는 맵에서는 표창의 레시피를 파밍하기 때문에 버닝 수치가 낮아, 해당 지역에서 사냥하면서 진행합니다."
    </string>
    <string name="union_hunting_zero_16_description">"마의 구간 170입니다.\n" +
    "이 구간에서 사냥터 추천이 애매합니다. 그냥 작열의 숲 1에서 버닝 10을 챙겨가며 175까지 사냥하셔도 좋고, 175까지 크리티아스 퀘스트를 진행하시면서 진행하셔도 괜찮습니다."
    <string name="union_hunting_zero_17_description">"연무장과 무기고의 스타포스 요구치인 120은 리부트에서 유니온 캐릭터가 이벤트 없이 달성하기에는 거의 불가능에 가깝습니다.\n" +
        "그렇기 때문에 기사의 전당2를 추천합니다. 해당 지역은 스타포스 존이 아닙니다만, 플레임 위자드 몬스터가 소환하는 이프리트 또한 경험치를 주기 때문입니다.\n" +
        "해당 지역부터는 버닝이 없을 확률이 높기 때문에 버닝이 없다면 새비지 터미널의 '위험한 암시장 골목2'도 괜찮습니다만\n" +
        "그란디스 직업군은 스토리를 진행하지 않으면 갈 수 없기 때문에 무조건 기사의 전당으로 가셔야합니다."</string>
    <string name="union_hunting_zero_17_description">"185에는 쓸쓸한 바위길에서 192까지 사냥을 합니다."</string>
    <string name="union_hunting_zero_18_description">"192때 바위길 왼쪽의 고열의 땅에서 돼지들을 사냥을 합니다."</string>
    <string name="union_hunting_zero_19_description">"194에는 길라잡이를 통하여 버려진 발굴지역 2로 이동하고 옆 포탈의 버려진 발굴지역 3에서 196까지 사냥합니다."</string>
    <string name="union_hunting_zero_20_description">"196부터는 스타포스존인 발굴 중단지역에서 199까지 사냥을 진행합니다.\n"+
        "스타포스를 도저히 채울 수 없다면 버려진 발굴지역에서 199까지 달성하셔도 문제 없습니다.\n" +
        "\n" +
        "199를 달성하셨다면 헤이븐의 멍청이 퀘스트를 통하여 200을 달성해주세요."</string>
    <string name="union_hunting_base_1_description">"여러분이 얼마나 유니온이 높든 튜토리얼 퀘는 사라지지 않습니다."</string>
    <string name="character_level">캐릭터 레벨 : </string>
    <string name="monster_level">몬스터 레벨 : </string>
    <string name="monster_timer">6분당 마릿수 : </string>
    <string name="get_meso_rate">메소 획득량 : </string>
    <string name="get_item_rate">아이템 드롭률 : 67%</string>
    <string name="meso_doping">재물 획득의 비약 사용 여부</string>
    <string name="calculation_description">사용 설명서</string>
    <string name="calculator_description">6분측정 마릿수에는 전투분석을 키고 6분동안 사냥해서 나온 마릿수를 입력하시면 됩니다.\n\n메획은 기본 100%와 재획비를 제외한 템메획, 팬텀 유니온, 어빌, 몬라 효과를 합산한 수치를 입력해 주세요. 쓸/찐심, 어빌, 템아획, 몬라 효과를 합산한 수치를 입력해 주세요.\n\n계산 결과는 엘리트 몬스터/엘리트 보스가 나오지 않으며, 몬스터가 떨어트린 메소를 전부 줍는다고 가정한 결과입니다.</string>
    <string name="calculate">계산하기</string>
    <string name="result">결과 : </string>
    <string name="link_header1">직업</string>
    <string name="link_header2">스킬</string>
    <string name="link_header3">효과(1레벨/2레벨)</string>
    <string name="class_mercedes_name">메르세데스</string>
    <string name="class_evan_name">에반</string>
    <string name="class_aran_name">아란</string>
    <string name="class_warrior_name">모험가 (전사)</string>
    <string name="class_mihile_name">미하일</string>
    <string name="class_resistance_name">레지스탕스</string>
    <string name="class_cygnus_name">시그너스</string>
    <string name="class_kaiser_name">카이저</string>
    <string name="class_eunwol_name">은월</string>
    <string name="link_mercedes_name">엘프의 축복</string>
    <string name="link_evan_name">룬 퍼시스턴스</string>
    <string name="link_aran_name">콤보 킬 어드밴티지</string>
    <string name="link_warrior_name">인빈서블 빌리프</string>
    <string name="link_mihile_name">빛의 수호</string>
    <string name="link_resistance_name">스피릿 오브 프리덤</string>
    <string name="link_cygnus_name">시그너스 블레스</string>
    <string name="link_kaiser_name">아이언 월</string>
    <string name="link_eunwol_name">구사일생</string>
    <string name="link_mercedes_effect">경험치 10%/15% 추가</string>
    <string name="link_evan_effect">룬 해방 지속시간 30%/50% 증가</string>
    <string name="link_aran_effect">영구적으로 콤보 킬 구슬 경험치 획득량 400%/650% 증가</string>
    <string name="link_warrior_effect">3초 동안 1초마다 \n최대 HP의 \n20%/23%/26%/29%/32%/\n35% 회복, \n재발동 대기시간 410/370/330/290/\n250/210초 \n(HP가 15% 이하일 때 자동 발동)</string>
    <string name="link_mihile_effect">10/15초 동안 \n상태 이상 내성 100 증가</string>
    <string name="link_resistance_effect">부활시 1\u002f2\u002f3\u002f4\u002f5\u002f6\u002f7\n\u002f8초 동안 피해를 받지 않음</string>
    <string name="link_cygnus_effect">공격력·마력 \n7/9/11/13/\n15/17/19/21/23/25, \n상태이상 내성 \n2/5/7/10/12/\n15/17/20/22/25, \n모든 속성 저항 \n2%/5%/7%/10%/\n12%/15%/17%/20%/\n22%/25% 증가</string>
    <string name="link_kaiser_effect">최대 HP 10%/15% 증가</string>
    <string name="link_eunwol_effect">사망에 이르는 공격을 당할 시,\n 5%/10% 확률로 생존</string>
</resources>