<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/union"
            android:title="@string/item1_title" />

        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/link"
            android:title="@string/item2_title" />

        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/core"
            android:title="@string/item3_title" />

        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/meso"
            android:title="@string/item4_title" />

        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/weapon"
            android:title="@string/item5_title" />


        <item
            android:id="@+id/nav_item6"
            android:icon="@drawable/chu_chu"
            android:title="@string/item6_title" />

        <item
            android:id="@+id/nav_item7"
            android:icon="@drawable/boss_meso"
            android:title="@string/item7_title" />

        <item
            android:id="@+id/nav_item8"
            android:icon="@drawable/recipe"
            android:title="@string/item8_title" />

    </group>
</menu>