<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="기타 링크"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <!-- 헤더 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/link_header1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/link_header2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginLeft="10sp"
                android:text="@string/link_header3" />
        </TableRow>


        <!-- 모험가 (전사) -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/class_warrior_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/warrior_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_warrior_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:text="@string/link_warrior_effect" />
        </TableRow>

        <!-- 미하일 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_mihile_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:src="@drawable/mihile_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:text="@string/link_mihile_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:text="@string/link_mihile_effect" />
        </TableRow>

        <!-- 레지스탕스 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_resistance_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:src="@drawable/registance_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:text="@string/link_resistance_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/link_resistance_effect" />
        </TableRow>

        <!-- 카이저 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_kaiser_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:src="@drawable/kaiser_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:text="@string/link_kaiser_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:text="@string/link_kaiser_effect" />
        </TableRow>

        <!-- 은월 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_eunwol_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:src="@drawable/eunwal_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:text="@string/link_eunwol_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:text="@string/link_eunwol_effect" />
        </TableRow>
        <!-- 시그너스 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_cygnus_name" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:src="@drawable/cygunus_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:text="@string/link_cygnus_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:text="@string/link_cygnus_effect" />
        </TableRow>
    </TableLayout>
</LinearLayout>