<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient">

    <include
        android:id="@+id/toolbar_with_back_button"
        layout="@layout/toolbar_with_back_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@drawable/shadow"
        android:padding="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_level"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/character_level_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="260"
                android:inputType="number"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monster_level"
                android:textSize="18sp" />

        <EditText
            android:id="@+id/monster_level_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="265"
            android:inputType="number"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monster_timer"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/six_minute_count_edit_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="1400"
                android:inputType="number"
                android:layout_marginBottom="12dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_meso_rate"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/meso_drop_rate_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="number"
                    android:hint="1000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="%"
                    android:textSize="18sp" />

            </RelativeLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/item_drop_rate_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_item_rate"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp"
        android:background="#C5B8B8"
        android:textSize="18sp" />

        <View style="@style/Divider"/>

        <CheckBox
            android:id="@+id/wealth_potion_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meso_doping"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/description_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculation_description"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"/>
        </LinearLayout>



    </LinearLayout>


    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_description"
        android:textColor="@android:color/black"
        android:visibility="gone"/>

    </LinearLayout>
</layout>